--- a/public/index.html
+++ b/public/index.html
@@ -1,44 +1,85 @@
 <html>
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Smart Walking Stick</title>
         <style>
-            /* Reset margins for the body */
+            /* Base reset and typography */
             body {
                 margin: 0;
                 padding: 0;
+                font-family: Arial, sans-serif;
+                background: linear-gradient(135deg, #ececec, #f4f4f4);
+                display: flex;
+                flex-direction: column;
+                min-height: 100vh;
+                align-items: center;
+            }
+            /* Header styling */
+            header {
+                width: 100%;
+                background-color: #4CAF50;
+                color: white;
+                padding: 15px 20px;
+                text-align: center;
+                font-size: 1.5em;
+                box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+            }
+            /* Container for the video feed */
+            .container {
+                flex: 1;
                 display: flex;
                 flex-direction: column;
                 justify-content: center;
                 align-items: center;
-                min-height: 100vh;
-                background-color: #f4f4f4;
+                width: 100%;
+                max-width: 800px;
+                margin: 20px;
             }
-            /* Ensure the video image resizes well on mobile */
+            /* Video image styling */
             #video {
                 max-width: 100%;
-                height: auto;
-                display: block;
+                border: 5px solid #ddd;
+                box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+                border-radius: 8px;
+                transition: transform 0.3s;
+            }
+            #video:hover {
+                transform: scale(1.02);
+            }
+            /* Footer styling */
+            footer {
+                width: 100%;
+                text-align: center;
+                padding: 10px;
+                font-size: 0.9em;
+                color: #555;
+                background-color: #fafafa;
+                box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1);
             }
         </style>
     </head>
     <body>
-        <img id="video" alt="Live video feed" />
+        <header>
+            Smart Walking Stick Live Feed
+        </header>
+        <div class="container">
+            <img id="video" alt="Live video feed" />
+        </div>
+        <footer>
+            © 2023 Smart Walking Stick
+        </footer>
         <script src="/socket.io/socket.io.js"></script>
         <script>
             const socket = io();
             const img = document.getElementById('video');
 
             socket.on('frame', data => {
-                // Convert incoming ArrayBuffer data to a Blob.
                 const blob = new Blob([data], { type: 'image/jpeg' });
                 const preloader = new Image();
                 preloader.onload = () => {
-                    // Set the src once the frame is loaded to prevent flickering.
                     img.src = preloader.src;
-                    // Clean up the blob URL.
                     URL.revokeObjectURL(preloader.src);
                 };
-                // Create a blob URL for the image preloader.
                 preloader.src = URL.createObjectURL(blob);
             });
         </script>
